test/invalid/syntactic/invalid_keyword_position.sysml
// INVALID: def before part is wrong syntax
// EXPECTED: Parse error
def part Foo { }
